# cue-takehome

./: .gitignore  README_task1.md  README_task2.md  README_task3.md  evaluation_harness.py  extract_invoices.py  pyproject.toml  triage_pipeline.py
config/: extraction.default.yaml
golden_dataset/: golden_labels.jsonl
outputs/: extractions.jsonl  triage.jsonl
src/cue_invoice_extraction/: __init__.py  bank_matching.py  confidence.py  config.py  evaluation.py  jsonl.py  llm_extractor.py  normalization.py  pdf_rendering.py  pipeline.py  schemas.py  triage.py  validation.py
tests/: test_bank_matching.py  test_evaluation.py  test_normalization.py  test_triage.py  test_validation.py
